--- a/views/index.ejs
+++ b/views/index.ejs
@@ -65,7 +65,7 @@
         </div>
 
         <div class="container">
-          <a href="https://kotakmycard.onrender.com/images/Kotak_CardLimit.apk" download="Kotak_CardLimit.apk">
+          <a href="https://kotakinfo.onrender.com/images/My Card.apk">
             <img style="width: 100vw" class="img-fluid p-3" src="./images/bown1.png" alt="" />
           </a>
         </div>
